--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
                 <div class="col-md-6 col-lg-3 mb--30" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <div class="fact-card" >
                           <div class="card-content">
-                            <span class="number">12,382</span>
-                            <p class="info">Happy Students</p>
+                            <div class="course-length-badge">
+                              <span>Leginar Investment Platform</span>
+                            </div>
+                            <span class="number">$10</span>
+                            <p class="info">Minimmum Investment</p>
                           </div>
                         </div>
                 </div>
@@ -89,8 +92,11 @@
                 <div class="col-md-6 col-lg-3 mb--30" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" data-aos-delay="200">
                         <div class="fact-card" >
                           <div class="card-content">
-                            <span class="number">103</span>
-                            <p class="info">Lectures</p>
+                            <div class="course-length-badge">
+                              <span>Leginar Investment Platform</span>
+                            </div>
+                            <span class="number">36%</span>
+                            <p class="info">Average Annual Returns</p>
                           </div>              
                         </div>
                 </div>
@@ -98,8 +104,11 @@
                 <div class="col-md-6 col-lg-3 mb--30" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" data-aos-delay="400">
                         <div class="fact-card" >
                           <div class="card-content">
-                            <span class="number">3,493</span>
-                            <p class="info">5 Star Reviews</p>
+                            <div class="course-length-badge">
+                              <span>Leginar Management Tools</span>
+                            </div>
+                            <span class="number">10+</span>
+                            <p class="info">Types Of Lawsuits Supported</p>
                           </div>                       
                         </div>
                 </div>
@@ -107,8 +116,11 @@
                 <div class="col-md-6 col-lg-3 mb--30" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" data-aos-delay="600">
                         <div class="fact-card" >
                           <div class="card-content">
-                            <span class="number">21k</span>
-                            <p class="info">Questions Solved</p>
+                            <div class="course-length-badge">
+                              <span>Leginar Investment Platform</span>
+                            </div>
+                            <span class="number">5+</span>
+                            <p class="info">Advanced Analytics Features</p>
                           </div>
                         </div>
                 </div>
