Added a new image

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
       <div class="col-xl-6 col-lg-6 col-md-5 col-12">
         <div class="hero-media">
-          <img src="image/hero.png" alt="">
-          <a class="video-play-trigger" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"><i class="icon icon-triangle-right-17-2"></i></a>
+          <img src="image/legaltech.jpg" alt="">
+          <!-- <a class="video-play-trigger" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"><i class="icon icon-triangle-right-17-2"></i></a> -->
           <div class="media-shape animate-spin"><img src="image/media-shape.png" alt=""></div>
-          <p id="countdown"></p>
+          <!-- <p id="countdown"></p> -->
         </div>
       </div>
 
