--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <div class="col-sm-3 col-6 col-lg-2 col-xl-2 order-lg-1">
                   <!-- Brand Logo -->
                     <div class="brand-logo">
-                        <a href=""><img src="image/main-logo.png" alt="" /></a>
+                        <h3 style = "font-family: arima madurai extra bold"><a href="">Leginar</a></h3>
+                        <!-- <a href=""><img src="image/leginar.png" alt="" /></a> -->
                     </div>
                 </div>
                 <!-- Menu Block -->
