--- a/LeginarWaitlist/index.html
+++ b/LeginarWaitlist/index.html
@@ -30,31 +30,37 @@
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
+			<form action="https://comcast.us17.list-manage.com/subscribe/post?u=90b0080abfcd6fb59d0a93d6d&amp;id=0175da01eb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="contact100-form validate-form validate" target="_blank" novalidate>
 				<span class="contact100-form-title">
 					Join Leginar's Waitlist!
 				</span>
 
 				<div class="wrap-input100" data-validate="Name is required">
-					<span class="label-input100">Your Name</span>
-					<input class="input100" type="text" name="name" placeholder="Enter your name">
+					<span class="label-input100">Your First Name</span>
+					<input class="input100" type="text" name="FNAME" placeholder="Enter your first name" id="mce-FNAME">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100" data-validate="Name is required">
+					<span class="label-input100">Your Last Name</span>
+					<input class="input100" type="text" name="LNAME" placeholder="Enter your last name" id="mce-LNAME">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100" data-validate = "Valid email is required: ex@abc.xyz">
 					<span class="label-input100">Email</span>
-					<input class="input100" type="text" name="email" placeholder="Enter your email addess">
+					<input class="input100" type="text" name="EMAIL" placeholder="Enter your email addess" id="mce-EMAIL">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 input100-select">
 					<span class="label-input100">What of our Product/Service are you interested in?</span>
 					<div>
-						<select class="selection-2" name="service">
-							<option>Select Product</option>
-							<option>Litigation Financing And Investment Platform</option>
-							<option>Litigation Management And Operation Tools</option>
-							<option>Both</option>
+						<select class="selection-2" name="MMERGE3" id="mce-MMERGE3">
+							<option value="">Select Product</option>
+							<option value="Litigation Financing and Investment Platform">Litigation Financing And Investment Platform</option>
+							<option value="Litigation Management and Operation Tools">Litigation Management And Operation Tools</option>
+							<option value="Both">Both</option>
 						</select>
 					</div>
 					<span class="focus-input100"></span>
@@ -63,12 +69,12 @@
 				<div class="wrap-input100 input100-select">
 					<span class="label-input100">Who are you?</span>
 					<div>
-						<select class="selection-2" name="budget">
-							<option>Select Options</option>
-							<option>Attorney/Law Firm</option>
-							<option>Litigant</option>
-							<option>Someone Interested In Financing Lawsuits.</option>
-							<option>Other</option>
+						<select class="selection-2" name="MMERGE4" id="mce-MMERGE4">
+							<option value="">Select Options</option>
+							<option value="Attorney/Law Firm">Attorney/Law Firm</option>
+							<option value="Litigant">Litigant</option>
+							<option value="Someone interested in financing lawsuits">Someone Interested In Financing Lawsuits.</option>
+							<option value="Other">Other</option>
 						</select>
 					</div>
 					<span class="focus-input100"></span>
@@ -76,21 +82,23 @@
 
 				<div class="wrap-input100">
 					<span class="label-input100">If you selected "other", please explain.</span>
-					<input class="input100" type="text" name="email" placeholder="Some information about you.">
+					<input class="input100" type="text" name="MMERGE5" placeholder="Some information about you." id="mce-MMERGE5">
 					<span class="focus-input100"></span>
 				</div>
 
 
 				<div class="wrap-input100">
 					<span class="label-input100">Additional Information</span>
-					<textarea class="input100" name="message" placeholder="Anything else you would like us to know?"></textarea>
+					<textarea class="input100" name="MMERGE6" placeholder="Anything else you would like us to know?" id="mce-MMERGE6"></textarea>
 					<span class="focus-input100"></span>
 				</div>
+				<!-- Real people do not fill this in, this is to prevent bots -->
+    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_90b0080abfcd6fb59d0a93d6d_0175da01eb" tabindex="-1" value=""></div>
 
 				<div class="container-contact100-form-btn">
 					<div class="wrap-contact100-form-btn">
 						<div class="contact100-form-bgbtn"></div>
-						<button class="contact100-form-btn">
+						<button type="submit" name="subscribe" class="contact100-form-btn" id="mc-embedded-subscribe">
 							<span>
 								Submit
 								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
@@ -138,6 +146,8 @@
 
   gtag('config', 'UA-23581568-13');
 </script>
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='dropdown';fnames[4]='MMERGE4';ftypes[4]='dropdown';fnames[5]='MMERGE5';ftypes[5]='text';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
 </body>
 </html>
