Some text changes and new tab opening for form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="hero-content">
           <h1>Litigation Financing and Management</h1>
           <p>Leginar is building a platform for people to invest in lawsuits. We also develop dashboards and organizational tools for litigants, attorneys and law firms to manage their documents, finances and deadlines. </p>
-          <div class="hero-btn"><a href="LeginarWaitlist/index.html" class="btn btn--orange btn--hover-shine">Join The Waitlist</a></div>
+          <div class="hero-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn btn--orange btn--hover-shine">Join The Waitlist</a></div>
         </div>
       </div>
 
@@ -310,7 +310,7 @@
                   </div>
                   <div class="acc-head-contents">
                     <h3>For Attorneys</h3>
-                    <p>Manage all clients, lawsuits and source new clients.</p>
+                    <p>Manage clients, lawsuits and source new clients.</p>
                   </div>
                 </div>
               </div>
@@ -355,7 +355,7 @@
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="55" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
                 <h2>Ready To Get Started? </h2>
-                <div class="footer-btn"><a href="LeginarWaitlist/index.html" class="btn btn--orange btn--hover-shine">Join The Waitlist</a></div>
+                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn btn--orange btn--hover-shine">Join The Waitlist</a></div>
             </div>
           </div>
         </div>
