color changes and form update

--- a/LeginarWaitlist/index.html
+++ b/LeginarWaitlist/index.html
@@ -92,6 +92,11 @@
 					<textarea class="input100" name="MMERGE6" placeholder="Anything else you would like us to know?" id="mce-MMERGE6"></textarea>
 					<span class="focus-input100"></span>
 				</div>
+				<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div>
+
 				<!-- Real people do not fill this in, this is to prevent bots -->
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_90b0080abfcd6fb59d0a93d6d_0175da01eb" tabindex="-1" value=""></div>
 
