--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <img src="./image/course-yelloow-svg.svg" alt="">
   </div>
 
-  <div class="container pt-lg--85">
-    <div class="row justify-content-center">
+  <div class="container pt-lg--85 mt-5">
+    <div class="row justify-content-center mt-5">
       <div class="col-lg-8">
         <div class="section-title section-black">
           <h2>Investment Platform</h2>
@@ -242,13 +242,13 @@
 <!-- For Legal Management Tools -->
 <section class="course-section position-relative">
   <div class="shape-holder">
-    <img src="./image/section-2-shape-bg.svg" alt="">
+    <img src="./image/section-3-shape-bg.svg" alt="">
   </div>
-  <div class="shape-holder" data-aos="zoom-in"  data-aos-once="true">
+  <!-- <div class="shape-holder" data-aos="zoom-in"  data-aos-once="true">
     <img src="./image/section-2-shape.svg" alt="">
-  </div>
+  </div> -->
   <div class="shape-holder course-shape-3" data-aos="zoom-in-left" data-aos-once="true">
-    <img src="./image/course-yelloow-svg.svg" alt="">
+    <img src="./image/course-yellow-svg.svg" alt="">
   </div>
   <div class="container pt-lg--85">
     <div class="row justify-content-center">
