--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <div class="shape-holder course-shape-3" data-aos="zoom-in-left" data-aos-once="true">
     <img src="./image/course-yellow-svg.svg" alt="">
   </div>
-  <div class="container pt-lg--85">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="section-title section-black">
