Addded title tag and punc

--- a/LeginarWaitlist/index.html
+++ b/LeginarWaitlist/index.html
@@ -73,7 +73,7 @@
 							<option value="">Select Options</option>
 							<option value="Attorney/Law Firm">Attorney/Law Firm</option>
 							<option value="Litigant">Litigant</option>
-							<option value="Someone interested in financing lawsuits">Someone Interested In Financing Lawsuits.</option>
+							<option value="Someone interested in financing lawsuits">Someone Interested In Financing Lawsuits</option>
 							<option value="Other">Other</option>
 						</select>
 					</div>
