--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <!-- Custom Stylesheet -->
   <link rel="stylesheet" href="./css/settings.css">
   <link rel="stylesheet" href="./css/custom.css">
+
+  <title>Leginar</title>
   <script src="./js/countdown.js"></script>
 </head>
 
