--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./css/settings.css">
   <link rel="stylesheet" href="./css/custom.css">
 
-  
+
   <script src="./js/countdown.js"></script>
 </head>
 
@@ -88,7 +88,7 @@
                               <span>Leginar Investment Platform</span>
                             </div>
                             <span class="number">$10</span>
-                            <p class="info">Minimmum Investment</p>
+                            <p class="info">Minimum Investment</p>
                           </div>
                         </div>
                 </div>
@@ -100,7 +100,7 @@
                               <span>Leginar Investment Platform</span>
                             </div>
                             <span class="number">36%</span>
-                            <p class="info">Average Annual Returns</p>
+                            <p class="info">Average Annual Return</p>
                           </div>              
                         </div>
                 </div>
