Addeed info change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="fact-card" >
                           <div class="card-content">
                             <div class="course-length-badge">
-                              <span>Leginar Investment Platform</span>
+                              <span>Leginar Management Tools</span>
                             </div>
                             <span class="number">5+</span>
                             <p class="info">Advanced Analytics Features</p>
