--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@
 
 
 <!-- Course section -->
-<section class="course-section position-relative">
+<section class="course-section position-relative pb-0" style="background-color: #A8D0E6;">
   <div class="shape-holder">
     <img src="./image/section-2-shape-bg.svg" alt="">
   </div>
-  <div class="shape-holder" data-aos="zoom-in"  data-aos-once="true">
+  <div class="shape-holder" style="z-index: 0;" data-aos="zoom-in"  data-aos-once="true">
     <img src="./image/section-2-shape.svg" alt="">
   </div>
-  <div class="shape-holder course-shape-3" data-aos="zoom-in-left" data-aos-once="true">
-    <img src="./image/course-yelloow-svg.svg" alt="">
-  </div>
+  <!-- <div class="shape-holder course-shape-3" style="z-index: 2;" data-aos="zoom-in-left" data-aos-once="true">
+    <img src="./image/course-yellow-svg.svg" alt="">
+  </div> -->
 
   <div class="container pt-lg--85 mt-5">
     <div class="row justify-content-center mt-5">
@@ -240,14 +240,14 @@
 
 
 <!-- For Legal Management Tools -->
-<section class="course-section position-relative">
+<section class="course-section position-relative" style="background-color: #A8D0E6;">
   <div class="shape-holder">
     <img src="./image/section-3-shape-bg.svg" alt="">
   </div>
   <!-- <div class="shape-holder" data-aos="zoom-in"  data-aos-once="true">
     <img src="./image/section-2-shape.svg" alt="">
   </div> -->
-  <div class="shape-holder course-shape-3" data-aos="zoom-in-left" data-aos-once="true">
+  <div class="shape-holder course-shape-3" style="z-index: 0;" data-aos="zoom-in-left" data-aos-once="true">
     <img src="./image/course-yellow-svg.svg" alt="">
   </div>
   <div class="container">
@@ -344,13 +344,13 @@
       </div>
       </div>
 </section>
-<br>
-<br>
+<!-- <br>
+<br> -->
 
 
 <!-- Footer Section -->
-<div class="footer-section position-relative">
-  <div class="container margin-decrese">
+<div class="footer-section position-relative mt-4 mt-sm-4" style="z-index: 1; background-color:#EAE7DC;">
+  <div class="container margin-decrese" style="border-style: none; margin-top:1rem;">
       <div class="row justify-content-center">
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="55" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
@@ -359,9 +359,9 @@
             </div>
           </div>
         </div>
-        <span class="section-devider mt--130"></span>
-      <div class="row mt--70">
-  </div>
+        <span class="section-devider mt--130" style="border-style: none;"></span>
+      <!-- <div class="row mt--70">
+  </div> -->
   <div class="shape-holder footer-shape-1" data-aos="zoom-in-left" data-aos-once="true"><img src="image/cta-shape.svg" alt=""></div>
   <div class="shape-holder footer-shape-2" data-aos="zoom-in-right" data-aos-once="true"><img src="image/footer-shape.svg" alt=""></div>
 </div>
