--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                               <span>Leginar Investment Platform</span>
                             </div>
                             <span class="number">36%</span>
-                            <p class="info">Average Annual Return</p>
+                            <p class="info">Litigation Finanacing's AAR </p>
                           </div>              
                         </div>
                 </div>
