--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
       <div class="row justify-content-center">
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="55" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
-                <h2>Ready To Get Started? </h2>
-                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn btn--orange btn--hover-shine">Join The Waitlist</a></div>
+                <h2>Ready to start earning?</h2>
+                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join The Waitlist</a></div>
             </div>
           </div>
         </div>
