More visual edits

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
 <!-- Course section -->
-<section class="course-section position-relative" style="background-color: #F6F6F6;">
+<section class="course-section position-relative" style="background-color: #ffffff;">
 
 <!-- Course section -->
 
@@ -325,7 +325,7 @@
 <div class="footer-section position-relative mt-4 mt-sm-0" style="z-index: 1; background-color:#ffffff;">
   <div class="container margin-decrese" style="border-style: none; margin-top:1rem;">
       <div class="row justify-content-center">
-          <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="55" data-aos-duration="2000" data-aos-once="true">
+          <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="40" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
                 <h2>Ready to start earning?</h2>
                 <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join The Waitlist</a></div>
