More visual updates

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul class="main-menu">
                             <li class="menu-item has-dropdown">
                                 <a href="#features">For investors</a>
-                                    <ul class="menu-dropdown">
+                                    <!-- <ul class="menu-dropdown">
                                         <li class="single-item">
                                             <a href="">
                                             <h3>Mobile Application</h3> 
@@ -81,7 +81,7 @@
                                                 <p>Best for Mobile App Presentation</p>
                                             </a> 
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                             <li class="menu-item "><a href="#features">For litigants</a></li>
                     
@@ -105,7 +105,7 @@
       <div class="col-xl-6 col-lg-6 col-md-7 col-12">
         <div class="hero-content">
           <h1     font-family: Inter>Litigation financing for all.</h1>
-          <p>Leginar is building a platform for people to invest in lawsuits. </p>
+          <p>Leginar is building the platform for people to invest in lawsuits. </p>
           <div class="hero-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join Waitlist</a></div>
         </div>
       </div>
@@ -141,7 +141,7 @@
                             <!-- <div class="course-length-badge">
                               <span>Leginar Investment Platform</span>
                             </div> -->
-                            <span class="number" style = "font-weight: 500;">$10</span>
+                            <span class="number">$10</span>
                             <p class="info">Minimum investment</p>
                           </div>
                         </div>
@@ -207,17 +207,17 @@
                     <img src="./image/course-acc-icon.svg" alt="">
                   </div>
                   <div class="acc-head-contents">
-                    <h3>Analyzing User Data</h3>
-                    <p>Who are you developing for? How will they use your design? Building user personas can answer these.</p>
+                    <h3>For investors.</h3>
+                    <p>Build your portfolio and subscribe to your favorite case topics.</p>
                   </div>
                 </div>
               </div>
               <div class="col-xl-4 col-lg-5 offset-xl-2">
                 <div class="acc-right-content d-flex">
-                  <div class="course-length-badge">
+                  <!-- <div class="course-length-badge">
                     <span>6 Video Classes</span>
                     <span>3.4hrs</span>
-                  </div>
+                  </div> -->
                   <button class="btn acc-toggle" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <i class="icon icon-minimal-down"></i>
                   </button>
@@ -230,9 +230,10 @@
         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
           <div class="card-body">
               <ul class="course-inline-list">
-                <li><a href=""><i class="icon icon-check-2"></i>Persona Creation</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Why Persona is Important</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Data-Driven Personas</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Fund litigations with $10 minimum investment</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Build your portfolio and win streak</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Subscribe to topics you car about and attorneys you trust</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Stay up-to-date with live litigations in the U.S., invest in your beliefs, and empower the world you want to see for the people who need it most</a></li>
               </ul>
           </div>
         </div>
@@ -246,17 +247,17 @@
                     <img src="./image/course-acc-icon.svg" alt="">
                   </div>
                   <div class="acc-head-contents">
-                    <h3>User Persona</h3>
-                    <p>Who are you developing for? How will they use your design? Building user personas can answer these.</p>
+                    <h3>For litigants.</h3>
+                    <p>Upload your case and for instant access to funding.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 offset-lg-2">
                 <div class="acc-right-content d-flex">
-                  <div class="course-length-badge">
+                  <!-- <div class="course-length-badge">
                     <span>6 Video Classes</span>
                     <span>3.4hrs</span>
-                  </div>
+                  </div> -->
                   <button class="btn acc-toggle collapsed" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
                     <i class="icon icon-minimal-down"></i>
                   </button>
@@ -269,9 +270,10 @@
         <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordionExample">
           <div class="card-body">
               <ul class="course-inline-list">
-                <li><a href=""><i class="icon icon-check-2"></i>Persona Creation</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Why Persona is Important</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Data-Driven Personas</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Set the target funding you need to get your case off the ground and amount of dilution</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Set the topics your case applies to</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Join 100s of other cases on the platform</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Get your attourney to upvote your case for more coverage</a></li>
               </ul>
           </div>
         </div>
@@ -285,17 +287,17 @@
                     <img src="./image/course-acc-icon.svg" alt="">
                   </div>
                   <div class="acc-head-contents">
-                    <h3>Prototyping</h3>
-                    <p>Who are you developing for? How will they use your design? Building user personas can answer these.</p>
+                    <h3>For attorneys.</h3>
+                    <p>Fund clients on Leginar and get paid upfront for your cases.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 offset-lg-2">
                 <div class="acc-right-content d-flex">
-                  <div class="course-length-badge">
+                  <!-- <div class="course-length-badge">
                     <span>6 Video Classes</span>
                     <span>3.4hrs</span>
-                  </div>
+                  </div> -->
                   <button class="btn acc-toggle collapsed" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
                     <i class="icon icon-minimal-down"></i>
                   </button>
@@ -308,9 +310,9 @@
         <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordionExample">
           <div class="card-body">
               <ul class="course-inline-list">
-                <li><a href=""><i class="icon icon-check-2"></i>Persona Creation</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Why Persona is Important</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Data-Driven Personas</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Provide immediate investment and a community of support for your clients</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Earn carry in the cases your bring to the Leginar platform</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Earn for trading your data back to Leginar to help us make better win estimates for future cases</a></li>
               </ul>
           </div>
         </div>
@@ -325,10 +327,10 @@
 <div class="footer-section position-relative mt-4 mt-sm-0" style="z-index: 1; background-color:#ffffff;">
   <div class="container margin-decrese" style="border-style: none; margin-top:1rem;">
       <div class="row justify-content-center">
-          <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="40" data-aos-duration="2000" data-aos-once="true">
+          <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="30" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
                 <h2>Ready to start earning?</h2>
-                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join The Waitlist</a></div>
+                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join Waitlist</a></div>
             </div>
           </div>
         </div>
