Join waitlist added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="col-sm-8 col-lg-2 col-xl-2 d-none d-sm-block order-lg-3">
                     <div class="hero-btn">
                        <ul class="main-menu">
-                        <li class="menu-item "><a href="#features">Join</a></li>
+                        <li class="menu-item "><a href="https://airtable.com/shrnOGkO3SrQm05h2">Join</a></li>
                       </ul>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
         <div class="hero-content">
           <h1     font-family: Inter>Litigation financing for all.</h1>
           <p>Leginar is building the platform for people to invest in lawsuits. </p>
-          <div class="hero-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join Waitlist</a></div>
+          <div class="hero-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
         </div>
       </div>
 
@@ -330,7 +330,7 @@
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="30" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
                 <h2>Ready to start earning?</h2>
-                <div class="footer-btn"><a href="LeginarWaitlist/index.html" target="_blank" class="btn">Join Waitlist</a></div>
+                <div class="footer-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
             </div>
           </div>
         </div>
