--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@ $(document).ready(function(){
                 <li><a href=""><i class="icon icon-check-2"></i>Set the target funding you need to get your case off the ground and amount of dilution</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Set the topics your case applies to</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Join 100s of other cases on the platform</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Get your attourney to upvote your case for more coverage</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Have investors upvote your case for more coverage</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Build your support community of backers</a></li>
               </ul>
           </div>
         </div>
@@ -340,7 +341,7 @@ $(document).ready(function(){
           <div class="card-body">
               <ul class="course-inline-list">
                 <li><a href=""><i class="icon icon-check-2"></i>Provide immediate investment and a community of support for your clients</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Earn carry in the cases your bring to the Leginar platform</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Earn carry in the cases you bring to the Leginar platform</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Earn for trading your data back to Leginar to help us make better win estimates for future cases</a></li>
               </ul>
           </div>
