redid picture so i dont get sued

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ $(document).ready(function(){
                               <span>Leginar Investment Platform</span>
                             </div> -->
                             <span class="number">36%</span>
-                            <p class="info">Litigation finanacing's AAR </p>
+                            <p class="info">Litigation financing's AAR </p>
                           </div>              
                         </div>
                 </div>
@@ -261,7 +261,7 @@ $(document).ready(function(){
               <ul class="course-inline-list">
                 <li><a href=""><i class="icon icon-check-2"></i>Fund litigations with $10 minimum investment</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Build your portfolio and win streak</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Subscribe to topics you car about and attorneys you trust</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Subscribe to topics you care about and attorneys you trust</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Stay up-to-date with live litigations in the U.S., invest in your beliefs, and empower the world you want to see for the people who need it most</a></li>
               </ul>
           </div>
