Added how it works section!

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css2?family=Inter:wght@200..900' rel=’stylesheet’>
   <script src="./js/countdown.js"></script>
+
 </head>
 
  <!-- Script for scrolling to content when header buttons are clicked -->
@@ -75,7 +76,7 @@ $(document).ready(function(){
                 <div class="col-sm-8 col-lg-2 col-xl-2 d-none d-sm-block order-lg-3">
                     <div class="hero-btn">
                        <ul class="main-menu">
-                        <li class="menu-item "><a href="https://grass-jet-50f.notion.site/How-it-works-cbff4e62e28d42afaae0eb0911f2e69e">How it works</a></li>
+                        <li class="menu-item "><a href="https://airtable.com/shrnOGkO3SrQm05h2">Join Waitlist</a></li>
                       </ul>
                     </div>
                 </div>
@@ -133,8 +134,8 @@ $(document).ready(function(){
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-7 col-12">
         <div class="hero-content">
-          <h1     font-family: Inter>Litigation financing for all.</h1>
-          <p>Leginar is building the platform for people to invest in lawsuits. </p>
+          <h1 font-family: Inter>Invest in lawsuits.</h1>
+          <p>Leginar provides litigation financing by letting people buy shares of lawsuits.</p>
           <div class="hero-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
         </div>
       </div>
@@ -205,6 +206,41 @@ $(document).ready(function(){
     </div>
   </div>
 </section>
+
+
+<!-- How It Works Area -->
+<div class="hero-area position-relative">
+  <div class="hero-card1">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-6 col-lg-6 col-md-7 col-12">
+        <div class="hero-content">
+          <h2> How it Works <br><br></h2>
+          <h3> Litigation Financing on Leginar </h3>
+          <h4><br>Leginar allows people to own shares of a litigation as an alternative asset investment. <br><br>
+
+People pursuing lawsuits will submit their case to Leginar. From there, our in-house legal team verifies the case and uploads it to the public exchange, where shares can be bought and sold immediately.<br><br>
+
+Shareholders can either withhold their shares throughout the duration of the litigation, or sell them as secondaries to other investors on the platform.<br><br>
+
+Once the case closes, shareholders make a return on their investment proportional to the amount of the lawsuit they own.<br></h4>
+          <div class="hero-btn"><a href="https://grass-jet-50f.notion.site/How-it-works-cbff4e62e28d42afaae0eb0911f2e69e" target="_blank" class="btn">Learn More</a></div>
+        </div>
+      </div>
+
+      <div class="col-xl-6 col-lg-6 col-md-5 col-12">
+        <div class="hero-media">
+          <img src="image/Steps.svg" alt="">
+          <!-- <a class="video-play-trigger" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"><i class="icon icon-triangle-right-17-2"></i></a> -->
+          <!-- <div class="media-shape animate-spin"><img src="image/media-shape.png" alt=""></div> -->
+          <!-- <p id="countdown"></p> -->
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="shape-holder hero-shape" data-aos="fade-right" data-aos-once="true"><img src="image/hero-orange-shape.svg" alt=""></div> -->
+</div>
 
 
 <!-- Course section -->
