--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="image/L.png"/>
+  <link rel="icon" type="image/png" href="image/Group 57.png"/>
   <title>Leginar</title>
   <!-- Plugins CSS -->
   <link rel="stylesheet" href="./plugins/bootstrap-4.3.1/css/bootstrap.min.css">
@@ -263,13 +263,13 @@ Once the case closes, shareholders make a return on their investment proportiona
 
 
     <div class="accordion course-accordion" id="accordionExample" >
-      <div class="card course-card"  data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
+      <div class="card course-card"  data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
         <div class="card-header" id="headingOne">
           <div class="row">
               <div class="col-xl-6 col-lg-7">
                 <div class="acc-left-content d-flex">
                   <div class="acc-icon">
-                    <img src="./image/course-acc-icon.svg" alt="">
+                    <img src="./image/Group 56.svg" alt="">
                   </div>
                   <div class="acc-head-contents" id="ForInvestors">
                     <h3>For investors.</h3>
