--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Once the case closes, shareholders make a return on their investment proportiona
               <div class="col-xl-6 col-lg-7">
                 <div class="acc-left-content d-flex">
                   <div class="acc-icon">
-                    <img src="./image/Group 56.svg" alt="">
+                    <img src="./image/money sign.svg" alt="">
                   </div>
                   <div class="acc-head-contents" id="ForInvestors">
                     <h3>For investors.</h3>
@@ -309,7 +309,7 @@ Once the case closes, shareholders make a return on their investment proportiona
               <div class="col-lg-6">
                 <div class="acc-left-content d-flex">
                   <div class="acc-icon">
-                    <img src="./image/course-acc-icon.svg" alt="">
+                    <img src="./image/profile sign.svg" alt="">
                   </div>
                   <div class="acc-head-contents" id="ForLitigants">
                     <h3>For litigants.</h3>
@@ -350,7 +350,7 @@ Once the case closes, shareholders make a return on their investment proportiona
               <div class="col-lg-6">
                 <div class="acc-left-content d-flex">
                   <div class="acc-icon">
-                    <img src="./image/course-acc-icon.svg" alt="">
+                    <img src="./image/mallet sign.svg" alt="">
                   </div>
                   <div class="acc-head-contents" id="ForAttorneys">
                     <h3>For attorneys.</h3>
